--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -23,9 +23,14 @@ jobs:
         npm i
         npm run build
         npm run make -- -f -p docs
-        cp -R ./coverage ./docs/dist/coverage
+        npm -w docs-static run rebuild
+        npm -w docs-static run start &
+        sleep 2
+        npm -w docs-static run build-static
+        # pkill -f \"remix-serve dist\"
+        cp -R ./coverage ./docs-static/static/coverage
         npm i coverage-badges-cli -g
-        coverage-badges --output ./docs/dist/badge-coverage.svg
+        coverage-badges --output ./docs-static/static/badge-coverage.svg
       env:
         CI: true
 
@@ -34,4 +39,4 @@ jobs:
       if: ${{ github.ref == 'refs/heads/dev' }}
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./docs/dist
+        publish_dir: ./docs-static/static
