--- a/docs/package.json
+++ b/docs/package.json
@@ -2,18 +2,26 @@
   "name": "@ts-retype/docs",
   "version": "0.0.0",
   "private": true,
+  "main": "dist/index.cjs",
+  "module": "dist/index.es.js",
   "type": "module",
   "scripts": {
-    "build": "tsc && vite build",
+    "build": "rollup -c",
+    "buildx": "tsc && vite build",
     "clean": "rm -rf dist",
     "dev": "vite",
     "preview": "vite preview"
   },
-  "dependencies": {
-    "@ts-retype/retype": "*",
-    "@ts-retype/uikit": "*",
+  "files": [
+    "dist"
+  ],
+  "peerDependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "dependencies": {
+    "@ts-retype/retype": "*",
+    "@ts-retype/uikit": "*"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
@@ -23,5 +31,6 @@
     "stylus": "^0.59.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
-  }
+  },
+  "types": "dist/index.d.ts"
 }
