--- a/uikit/package.json
+++ b/uikit/package.json
@@ -7,10 +7,14 @@
   "type": "module",
   "scripts": {
     "build": "rollup -c",
+    "build-storybook": "storybook build",
     "buildx": "tsc && vite build",
     "clean": "rm -rf dist",
+    "cosmos": "cosmos",
+    "cosmos:export": "cosmos-export",
     "dev": "vite",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "storybook": "storybook dev -p 6006"
   },
   "files": [
     "dist"
@@ -27,22 +31,37 @@
     "@rollup/plugin-commonjs": "^24.1.0",
     "@rollup/plugin-node-resolve": "^15.0.2",
     "@rollup/plugin-typescript": "^11.1.0",
+    "@storybook/addon-essentials": "^7.0.7",
+    "@storybook/addon-interactions": "^7.0.7",
+    "@storybook/addon-links": "^7.0.7",
+    "@storybook/addon-styling": "^1.0.5",
+    "@storybook/blocks": "^7.0.7",
+    "@storybook/react": "^7.0.7",
+    "@storybook/react-vite": "^7.0.7",
+    "@storybook/testing-library": "^0.0.14-next.2",
     "@types/chroma-js": "^2.4.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^3.1.0",
     "node-sass": "^8.0.0",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-cosmos": "^6.0.0-alpha.18",
+    "react-cosmos-plugin-vite": "^6.0.0-alpha.18",
+    "react-dom": "^18.2.0",
     "rollup": "^3.21.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-typescript2": "^0.34.1",
     "sass": "^1.62.0",
+    "storybook": "^7.0.7",
     "stylus": "^0.59.0",
     "typescript": "^4.9.3",
     "typescript-plugin-styled-components": "^2.0.0",
     "vite": "^4.2.0",
-    "vite-plugin-dts": "^2.3.0"
+    "vite-plugin-dts": "^2.3.0",
+    "vite-tsconfig-paths": "^4.2.0"
   },
   "types": "dist/index.d.ts"
 }
