fix: docs build paths

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -28,6 +28,7 @@ jobs:
         sleep 2
         npm -w docs-static run build-static
         # pkill -f \"remix-serve dist\"
+        mv ./docs-static/static/ts-retype/* ./docs-static/static/
         cp -R ./coverage ./docs-static/static/coverage
         npm i coverage-badges-cli -g
         coverage-badges --output ./docs-static/static/badge-coverage.svg
