feat: add playwright

--- a/docs/package.json
+++ b/docs/package.json
@@ -10,7 +10,8 @@
     "buildx": "tsc && vite build",
     "clean": "rm -rf dist",
     "dev": "vite",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "npm run buildx && npm run preview"
   },
   "files": [
     "dist"
