--- a/docs-static/package.json
+++ b/docs-static/package.json
@@ -29,6 +29,7 @@
     "@remix-run/eslint-config": "~1.14.2",
     "@types/styled-components": "^5.1.24",
     "eslint": "^8.27.0",
+    "serve": "^14.2.0",
     "typescript": "^4.8.4"
   },
   "sideEffects": false
