feat: use sparse matrix

--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
     "example:report": "cd example && npm run report",
     "format": "prettier --write './**/*.{js,ts,md,json}' --config ./.prettierrc",
     "format:check": "prettier --check .",
+    "hooks": "husky install",
     "lint": "npm run lint:docs && npm --no-bail run lint:json && npm run lint:package && npm run lint:js",
     "lint:docs": "prettier --write **/*.md",
     "lint:js": "eslint --cache src config tests vis/src --ext .js,.ts,.mjs,.cjs",
     "lint:json": "prettier --write **/tsconfig.json",
     "lint:package": "prettier --write **/package.json",
     "make": "npm -w scripts run make --",
-    "prepare": "husky install",
     "publish": "npm -w retype run publish",
     "retype": "npm -w retype run bin -- -c . -j vis/data.json",
     "scripts:build": "npm -w scripts run build",
@@ -42,6 +42,7 @@
     "security": "npm audit --audit-level=high",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest --coverage",
     "test:fast": "NODE_OPTIONS=--experimental-vm-modules jest --coverage -c jest.fast.config.ts",
+    "test:fast:watchAll": "NODE_OPTIONS=--experimental-vm-modules jest -c jest.fast.config.ts --watchAll",
     "test:watchAll": "NODE_OPTIONS=--experimental-vm-modules jest --watchAll",
     "vis:build": "cd vis && npm run build",
     "vis:clean": "cd vis && npm run clean",
