--- a/uikit/package.json
+++ b/uikit/package.json
@@ -54,6 +54,7 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-typescript2": "^0.34.1",
+    "rollup-plugin-visualizer": "^5.9.0",
     "sass": "^1.62.0",
     "storybook": "^7.0.7",
     "stylus": "^0.59.0",
