--- a/vis/package.json
+++ b/vis/package.json
@@ -23,6 +23,7 @@
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
     "micromatch": "^4.0.5",
+    "rollup-plugin-visualizer": "^5.9.0",
     "sass": "^1.59.2",
     "stylus": "^0.59.0",
     "typescript": "^4.9.3",
