core: fix tsconfig, imports

--- a/retype/package.json
+++ b/retype/package.json
@@ -25,7 +25,7 @@
     "bin:rebuild": "npm run build && ./dist/ts-retype.cjs",
     "build": "rollup -c",
     "clean": "rm -rf dist",
-    "dev": "ts-node-dev --respawn",
+    "dev": "nodemon --exec 'ts-node --esm --experimental-specifier-resolution=node'",
     "prebuild": "npm run clean",
     "publish": "cd dist && npm publish",
     "transpile": "tsc"
