--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -1,14 +1,8 @@
 {
+  "extends": "../tsconfig.json",
   "compilerOptions": {
-    "strict": true,
-    "target": "ESNext",
-    "module": "ESNext",
-    "moduleResolution": "node",
-    "isolatedModules": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "allowSyntheticDefaultImports": true,
     "outDir": "dist",
+    "declaration": true,
     "rootDirs": ["src"]
   },
   "include": ["src/**/*.ts"],
