--- a/clikit/package.json
+++ b/clikit/package.json
@@ -10,19 +10,43 @@
   "homepage": "https://petlack.github.io/ts-retype/",
   "bin": "dist/cli.js",
   "type": "module",
+  "exports": {
+    ".": {
+      "import": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.js"
+      }
+    },
+    "./app": {
+      "import": {
+        "types": "./dist/app/index.d.ts",
+        "default": "./dist/app/index.js"
+      }
+    },
+    "./components": {
+      "import": {
+        "types": "./dist/components/index.d.ts",
+        "default": "./dist/components/index.js"
+      }
+    }
+  },
   "engines": {
     "node": ">=16"
   },
   "scripts": {
     "build": "tsc",
+    "clean": "rm -rf dist",
     "debug": "DEV=true clikit",
-    "dev": "nodemon -I --exec node dist/cli.js",
+    "dev": "nodemon -I --exec node dev/cli.js",
+    "dev:any": "nodemon -I --exec node --",
+    "prebuild": "npm run clean",
     "start": "clikit",
+    "start:any": "node --",
     "test": "prettier --check . && xo && ava",
     "watch": "rollup -cw"
   },
   "files": [
-    "dist"
+    "dist/*"
   ],
   "dependencies": {
     "ink": "^4.1.0",
@@ -53,6 +77,7 @@
     "typescript": "^5.0.3",
     "xo": "^0.53.1"
   },
+  "types": "./dist/index.d.ts",
   "ava": {
     "extensions": {
       "ts": "module",
