--- a/clikit/tsconfig.json
+++ b/clikit/tsconfig.json
@@ -1,18 +1,12 @@
 {
+  "extends": "../tsconfig.json",
   "compilerOptions": {
-    "module": "esnext",
-    "moduleResolution": "node16",
-    "target": "es2020",
-    "lib": ["DOM", "DOM.Iterable", "ES2020"],
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "resolveJsonModule": true,
     "jsx": "react",
+    "lib": ["dom"],
     "declaration": true,
     "pretty": true,
     "newLine": "lf",
     "stripInternal": true,
-    "strict": true,
     "noImplicitReturns": true,
     "noImplicitOverride": true,
     "noUnusedLocals": true,
@@ -26,5 +20,5 @@
     "skipLibCheck": true,
     "outDir": "dist"
   },
-  "include": ["src", "../config"]
+  "include": ["src/index.ts"]
 }
