--- a/retype/tsconfig.json
+++ b/retype/tsconfig.json
@@ -1,19 +1,8 @@
 {
+  "extends": "../tsconfig.json",
   "compilerOptions": {
-    "target": "esnext",
-    "strict": true,
-    "preserveConstEnums": true,
-    "sourceMap": true,
-    "module": "es2020",
-    "lib": ["es2020"],
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "esModuleInterop": true,
-    "allowJs": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "isolatedModules": true,
     "outDir": "dist",
+    "declaration": true,
     "rootDirs": ["src", "tests"]
   },
   "include": ["src/**/*", "tests/**/*"],
