--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -5,6 +5,6 @@
     "declaration": true,
     "rootDirs": ["src"]
   },
-  "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "**/*.test.ts"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules"]
 }
