--- a/uikit/package.json
+++ b/uikit/package.json
@@ -63,6 +63,7 @@
     "@compai/css-gui": "^0.0.246",
     "@emotion/react": "^11.11.0",
     "@theme-ui/color": "^0.15.7",
+    "@theme-ui/preset-future": "^0.15.7",
     "chroma-js": "^2.4.2",
     "styled-components": "^5.3.10",
     "theme-ui": "^0.15.7"
