--- a/uikit/package.json
+++ b/uikit/package.json
@@ -86,11 +86,13 @@
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^3.1.0",
     "node-sass": "^8.0.0",
+    "polished": "^4.2.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-cosmos": "^6.0.0-alpha.18",
     "react-cosmos-plugin-vite": "^6.0.0-alpha.18",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "rollup": "^3.21.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
