--- a/uikit/package.json
+++ b/uikit/package.json
@@ -70,6 +70,7 @@
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^24.1.0",
+    "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.0.2",
     "@rollup/plugin-typescript": "^11.1.0",
     "@storybook/addon-essentials": "^7.0.7",
