--- a/uikit/tsconfig.json
+++ b/uikit/tsconfig.json
@@ -20,7 +20,7 @@
     },
     "jsx": "react-jsx"
   },
-  "include": ["src", "rollup.config.cjs"],
+  "include": ["src", "rollup.config.js"],
   "exclude": ["dist", "node_modules"],
   "references": [
     {
