use fontsource fonts

--- a/uikit/package.json
+++ b/uikit/package.json
@@ -63,6 +63,13 @@
   "dependencies": {
     "@compai/css-gui": "^0.0.246",
     "@emotion/react": "^11.11.0",
+    "@fontsource/arvo": "^5.0.1",
+    "@fontsource/exo-2": "^5.0.1",
+    "@fontsource/fira-code": "^5.0.1",
+    "@fontsource/hind": "^5.0.1",
+    "@fontsource/nunito-sans": "^5.0.1",
+    "@fontsource/oswald": "^5.0.1",
+    "@fontsource/poppins": "^5.0.1",
     "@theme-ui/color": "^0.15.7",
     "@theme-ui/preset-future": "^0.15.7",
     "chroma-js": "^2.4.2",
