--- a/uikit/package.json
+++ b/uikit/package.json
@@ -100,6 +100,7 @@
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^3.1.0",
     "esbuild-sass-plugin": "^2.9.0",
+    "eslint-plugin-react-refresh": "^0.4.1",
     "node-sass": "^8.0.0",
     "polished": "^4.2.2",
     "prop-types": "^15.8.1",
