--- a/uikit/package.json
+++ b/uikit/package.json
@@ -49,6 +49,7 @@
     "cosmos": "cosmos",
     "cosmos:export": "cosmos-export",
     "dev": "vite",
+    "lint": "eslint --cache src",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
     "watch": "rollup -c rollup.config.dev.js -w"
@@ -100,6 +101,7 @@
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^3.1.0",
     "esbuild-sass-plugin": "^2.9.0",
+    "eslint": "^8.41.0",
     "eslint-plugin-react-refresh": "^0.4.1",
     "node-sass": "^8.0.0",
     "polished": "^4.2.2",
