checkpoint: options in filters

--- a/uikit/package.json
+++ b/uikit/package.json
@@ -72,12 +72,15 @@
     "@fontsource/nunito-sans": "^5.0.1",
     "@fontsource/oswald": "^5.0.1",
     "@fontsource/poppins": "^5.0.1",
+    "@react-aria/button": "^3.7.2",
+    "@react-aria/listbox": "^3.9.1",
     "@theme-ui/color": "^0.15.7",
     "@theme-ui/preset-future": "^0.15.7",
     "chroma-js": "^2.4.2",
     "focus-trap-react": "^10.1.4",
     "framer-motion": "^10.12.16",
     "react-focus-lock": "^2.9.4",
+    "react-stately": "^3.23.0",
     "styled-components": "^5.3.10",
     "theme-ui": "^0.15.7"
   },
