--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
+    "typescript": "^5.1.3",
     "vitest": "^0.31.0"
   },
   "husky": {
