--- a/apps/bin/package.json
+++ b/apps/bin/package.json
@@ -3,13 +3,15 @@
     "sideEffects": false,
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
+    "type": "module",
+    "main": "dist/index.cjs",
     "scripts": {
         "build": "tsup",
         "build:watch": "tsup --watch --onSuccess \"npm run start\"",
         "copy-assets-from-vis": "mkdir -p ./dist/vis && cp -R ../vis/dist/* ./dist/vis/",
         "clean": "rm -rf ./dist",
-        "start": "node dist/index.js --help"
+        "dev": "node dist/index.cjs --help",
+        "start": "node dist/index.cjs --help"
     },
     "keywords": [],
     "author": "",
@@ -23,9 +25,6 @@
         "tsup": "^8.0.1"
     },
     "nx": {
-        "implicitDependencies": [
-            "@ts-retype/vis"
-        ],
         "targets": {
             "copy-assets-from-vis": {
                 "dependsOn": [
