--- a/nx.json
+++ b/nx.json
@@ -7,6 +7,10 @@
       "outputs": [
         "{projectRoot}/dist"
       ],
+      "inputs": [
+        "production",
+        "^production"
+      ],
       "cache": true
     },
     "lint": {
