--- a/packages/search/package.json
+++ b/packages/search/package.json
@@ -2,7 +2,9 @@
   "name": "@ts-retype/search",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/index.js",
+  "type": "module",
+  "main": "dist/index.cjs",
+  "types": "dist/index.d.cts",
   "scripts": {
     "build": "tsup --onSuccess \"tsc --emitDeclarationOnly --declaration\"",
     "build:watch": "tsup --watch --onSuccess \"npm run start\"",
