feat: add search lib & bin

--- a/apps/bin/package.json
+++ b/apps/bin/package.json
@@ -5,10 +5,14 @@
     "description": "",
     "type": "module",
     "main": "dist/index.cjs",
+    "bin": {
+        "ts-retype": "dist/ts-retype.cjs"
+    },
     "scripts": {
+        "bin": "./dist/ts-retype.cjs",
         "build": "tsup",
         "build:watch": "tsup --watch --onSuccess \"npm run start\"",
-        "copy-assets-from-vis": "mkdir -p ./dist/vis && cp -R ../vis/dist/* ./dist/vis/",
+        "copy-assets-from-vis": "mkdir -p ./dist/vis && cp -R ../vis/dist/* ./dist/vis/ && cp ./package.json ./dist/",
         "clean": "rm -rf ./dist",
         "dev": "node dist/index.cjs --help",
         "start": "node dist/index.cjs --help"
