--- a/packages/search/package.json
+++ b/packages/search/package.json
@@ -15,9 +15,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "date-fns": "^2.29.3",
+    "glob": "^9.1.0",
+    "progress": "^2.0.3",
+    "ramda": "^0.28.0",
+    "refractor": "^4.8.1",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@types/progress": "^2.0.5",
+    "@types/ramda": "^0.28.23",
     "tsup": "^8.0.1"
   }
 }
