--- a/packages/search/package.json
+++ b/packages/search/package.json
@@ -9,12 +9,14 @@
     "build": "tsup --onSuccess \"tsc --emitDeclarationOnly --declaration\"",
     "build:watch": "tsup --watch --onSuccess \"npm run start\"",
     "clean": "rm -rf ./dist",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "test": "vitest run --coverage"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ts-retype/utils": "workspace:*",
     "date-fns": "^2.29.3",
     "glob": "^9.1.0",
     "progress": "^2.0.3",
@@ -25,6 +27,8 @@
   "devDependencies": {
     "@types/progress": "^2.0.5",
     "@types/ramda": "^0.28.23",
-    "tsup": "^8.0.1"
+    "@vitest/coverage-v8": "^1.2.2",
+    "tsup": "^8.0.1",
+    "vitest": "^1.2.2"
   }
 }
