feat(utils): add package

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,9 @@
             "@ts-retype/uikit/*": [
                 "packages/uikit/dist/*"
             ],
+            "@ts-retype/utils/*": [
+                "packages/utils/dist/*"
+            ],
         }
     }
 }
