--- a/apps/bin/package.json
+++ b/apps/bin/package.json
@@ -22,6 +22,7 @@
     "license": "ISC",
     "dependencies": {
         "@ts-retype/search": "workspace:^",
+        "@ts-retype/utils": "workspace:^",
         "commander": "^11.1.0"
     },
     "devDependencies": {
