--- a/apps/bin/tsconfig.json
+++ b/apps/bin/tsconfig.json
@@ -6,7 +6,8 @@
         "rootDir": "src"
     },
     "include": [
-        "src/**/*"
+        "src/**/*",
+        ""
     ],
     "exclude": [
         "node_modules",
