--- a/packages/search/package.json
+++ b/packages/search/package.json
@@ -1,34 +1,34 @@
 {
-  "name": "@ts-retype/search",
-  "version": "1.0.0",
-  "description": "",
-  "type": "module",
-  "main": "dist/index.cjs",
-  "types": "dist/index.d.cts",
-  "scripts": {
-    "build": "tsup --onSuccess \"tsc --emitDeclarationOnly --declaration\"",
-    "build:watch": "tsup --watch --onSuccess \"npm run start\"",
-    "clean": "rm -rf ./dist",
-    "start": "node dist/index.js",
-    "test": "vitest run --coverage"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@ts-retype/utils": "workspace:*",
-    "date-fns": "^2.29.3",
-    "glob": "^9.1.0",
-    "progress": "^2.0.3",
-    "ramda": "^0.28.0",
-    "refractor": "^4.8.1",
-    "typescript": "^5.3.3"
-  },
-  "devDependencies": {
-    "@types/progress": "^2.0.5",
-    "@types/ramda": "^0.28.23",
-    "@vitest/coverage-v8": "^1.2.2",
-    "tsup": "^8.0.1",
-    "vitest": "^1.2.2"
-  }
+    "name": "@ts-retype/search",
+    "version": "1.0.0",
+    "description": "",
+    "type": "module",
+    "main": "dist/index.js",
+    "types": "dist/index.d.ts",
+    "scripts": {
+        "build": "tsup --onSuccess \"tsc --emitDeclarationOnly --declaration\"",
+        "build:watch": "tsup --watch --onSuccess \"npm run start\"",
+        "clean": "rm -rf ./dist",
+        "start": "node dist/index.js",
+        "test": "vitest run --coverage"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "@ts-retype/utils": "workspace:*",
+        "date-fns": "^2.29.3",
+        "glob": "^9.1.0",
+        "progress": "^2.0.3",
+        "ramda": "^0.28.0",
+        "refractor": "^4.8.1",
+        "typescript": "^5.3.3"
+    },
+    "devDependencies": {
+        "@types/progress": "^2.0.5",
+        "@types/ramda": "^0.28.23",
+        "@vitest/coverage-v8": "^1.2.2",
+        "tsup": "^8.0.1",
+        "vitest": "^1.2.2"
+    }
 }
