--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "type": "module",
-  "main": "dist/index.cjs",
-  "types": "dist/index.d.cts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsup --onSuccess \"tsc --emitDeclarationOnly --declaration\"",
     "build:watch": "tsup --watch --onSuccess \"npm run start\"",
