fix: working vis

--- a/apps/vis/package.json
+++ b/apps/vis/package.json
@@ -11,6 +11,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@ts-retype/search": "workspace:*",
         "@ts-retype/uikit": "workspace:*",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
@@ -25,7 +26,8 @@
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.5",
         "typescript": "^5.2.2",
-        "vite": "^5.0.8"
+        "vite": "^5.0.8",
+        "vite-tsconfig-paths": "^4.3.1"
     },
     "nx": {
         "targets": {
