--- a/packages/search/package.json
+++ b/packages/search/package.json
@@ -5,6 +5,11 @@
     "type": "module",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
+    "exports": {
+        ".": "./dist/index.js",
+        "./types": "./dist/types.js",
+        "./snippet": "./dist/snippet.js"
+    },
     "files": [
         "dist/index.js",
         "dist/snippet.js",
