fix: vis skeleton & load data

--- a/apps/vis/package.json
+++ b/apps/vis/package.json
@@ -13,10 +13,13 @@
     "dependencies": {
         "@ts-retype/search": "workspace:*",
         "@ts-retype/uikit": "workspace:*",
+        "minisearch": "^6.3.0",
+        "ramda": "^0.28.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     },
     "devDependencies": {
+        "@types/ramda": "^0.28.23",
         "@types/react": "^18.2.43",
         "@types/react-dom": "^18.2.17",
         "@typescript-eslint/eslint-plugin": "^6.14.0",
