--- a/apps/vis/package.json
+++ b/apps/vis/package.json
@@ -28,8 +28,9 @@
         "eslint": "^8.55.0",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.5",
-        "typescript": "^5.2.2",
-        "vite": "^5.0.8",
+        "typescript": "^5.3.3",
+        "vite": "^5.0.11",
+        "vite-plugin-singlefile": "^1.0.0",
         "vite-tsconfig-paths": "^4.3.1"
     },
     "nx": {
