--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@typescript-eslint/eslint-plugin": "^6.20.0",
     "@typescript-eslint/parser": "^6.20.0",
     "eslint": "^8.56.0",
-    "nx": "18.0.0"
+    "nx": "18.0.0",
+    "typescript": "^5.3.3"
   }
 }
