--- a/.retyperc
+++ b/.retyperc
@@ -1,8 +1,8 @@
 {
   "exclude": ["**/node_modules/**","**/dist/**"],
   "include": ["**/*.{ts,tsx}"],
-  "json": null,
-  "noHtml": false,
+  "json": "./apps/vis/src/assets/data.json",
+  "noHtml": true,
   "output": "./retype-report.html",
   "rootDir": "."
 }
