--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "bin": "./apps/bin/dist/ts-retype.cjs .",
     "build": "echo \"build all\""
   },
   "keywords": [],
