--- a/nx.json
+++ b/nx.json
@@ -1,33 +1,39 @@
 {
-  "targetDefaults": {
-    "build": {
-      "dependsOn": [
-        "^build"
-      ],
-      "outputs": [
-        "{projectRoot}/dist"
-      ],
-      "inputs": [
-        "production",
-        "^production"
-      ],
-      "cache": true
+    "targetDefaults": {
+        "build": {
+            "dependsOn": [
+                "^build"
+            ],
+            "outputs": [
+                "{projectRoot}/dist"
+            ],
+            "inputs": [
+                "production",
+                "^production"
+            ],
+            "cache": true
+        },
+        "test": {
+            "dependsOn": [
+                "build",
+                "^build"
+            ]
+        },
+        "lint": {
+            "cache": true
+        }
     },
-    "lint": {
-      "cache": true
+    "affected": {
+        "defaultBase": "main"
+    },
+    "namedInputs": {
+        "default": [
+            "{projectRoot}/**/*",
+            "sharedGlobals"
+        ],
+        "sharedGlobals": [],
+        "production": [
+            "default"
+        ]
     }
-  },
-  "affected": {
-    "defaultBase": "main"
-  },
-  "namedInputs": {
-    "default": [
-      "{projectRoot}/**/*",
-      "sharedGlobals"
-    ],
-    "sharedGlobals": [],
-    "production": [
-      "default"
-    ]
-  }
 }
