--- a/packages/uikit/package.json
+++ b/packages/uikit/package.json
@@ -1,48 +1,49 @@
 {
-  "name": "@ts-retype/uikit",
-  "version": "1.0.0",
-  "description": "",
-  "type": "module",
-  "main": "dist/index.js",
-  "scripts": {
-    "build": "tsup --onSuccess \"tsc --emitDeclarationOnly --declaration\"",
-    "build:watch": "tsup --watch --onSuccess \"npm run start\"",
-    "clean": "rm -rf ./dist",
-    "start": "node dist/index.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@ts-retype/search": "workspace:*",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "typescript": "^5.3.3"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.17",
-    "eslint": "^8.55.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "postcss": "^8.4.33",
-    "tailwindcss": "^3.4.1",
-    "tsup": "^8.0.1",
-    "typescript": "^5.2.2"
-  },
-  "nx": {
-    "targets": {
-      "build": {
-        "dependsOn": [
-          {
-            "target": "build:css"
-          }
-        ]
-      }
+    "name": "@ts-retype/uikit",
+    "version": "1.0.0",
+    "description": "",
+    "type": "module",
+    "main": "dist/index.js",
+    "scripts": {
+        "build": "tsup --onSuccess \"tsc --emitDeclarationOnly --declaration\"",
+        "build:css": "npx tailwindcss -c tailwind.config.cjs -i src/index.css -o dist/styles.css",
+        "build:watch": "tsup --watch --onSuccess \"npm run start\"",
+        "clean": "rm -rf ./dist",
+        "start": "node dist/index.js"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "@ts-retype/search": "workspace:*",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "typescript": "^5.3.3"
+    },
+    "devDependencies": {
+        "@types/react": "^18.2.43",
+        "@types/react-dom": "^18.2.17",
+        "@typescript-eslint/eslint-plugin": "^6.14.0",
+        "@typescript-eslint/parser": "^6.14.0",
+        "@vitejs/plugin-react": "^4.2.1",
+        "autoprefixer": "^10.4.17",
+        "eslint": "^8.55.0",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-react-refresh": "^0.4.5",
+        "postcss": "^8.4.33",
+        "tailwindcss": "^3.4.1",
+        "tsup": "^8.0.1",
+        "typescript": "^5.2.2"
+    },
+    "nx": {
+        "targets": {
+            "build": {
+                "dependsOn": [
+                    {
+                        "target": "build:css"
+                    }
+                ]
+            }
+        }
     }
-  }
 }
