--- a/packages/uikit/package.json
+++ b/packages/uikit/package.json
@@ -4,6 +4,11 @@
     "description": "",
     "type": "module",
     "main": "dist/index.js",
+    "exports": {
+        ".": "./dist/index.js",
+        "./tree": "./dist/tree.js",
+        "./dist/index.css": "./dist/index.css"
+    },
     "scripts": {
         "build": "tsup --onSuccess \"tsc --emitDeclarationOnly --declaration\"",
         "build:css": "npx tailwindcss -c tailwind.config.cjs -i src/index.css -o dist/styles.css",
