--- a/packages/uikit/package.json
+++ b/packages/uikit/package.json
@@ -23,8 +23,7 @@
     "dependencies": {
         "@ts-retype/search": "workspace:*",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "typescript": "^5.3.3"
+        "react-dom": "^18.2.0"
     },
     "devDependencies": {
         "@types/react": "^18.2.43",
@@ -39,6 +38,6 @@
         "postcss": "^8.4.33",
         "tailwindcss": "^3.4.1",
         "tsup": "^8.0.1",
-        "typescript": "^5.2.2"
+        "typescript": "^5.3.3"
     }
 }
