--- a/packages/uikit/package.json
+++ b/packages/uikit/package.json
@@ -22,6 +22,7 @@
     "license": "ISC",
     "dependencies": {
         "@ts-retype/search": "workspace:*",
+        "@ts-retype/theme": "workspace:*",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     },
@@ -39,5 +40,17 @@
         "tailwindcss": "^3.4.1",
         "tsup": "^8.0.1",
         "typescript": "^5.3.3"
+    },
+    "nx": {
+        "targets": {
+            "build": {
+                "dependsOn": [
+                    {
+                        "projects": "@ts-retype/theme",
+                        "target": "start"
+                    }
+                ]
+            }
+        }
     }
 }
