feat(theme): colors

--- a/packages/uikit/package.json
+++ b/packages/uikit/package.json
@@ -47,7 +47,7 @@
                 "dependsOn": [
                     {
                         "projects": "@ts-retype/theme",
-                        "target": "start"
+                        "target": "bin"
                     }
                 ]
             }
