--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -7,6 +7,7 @@
     "bin": "dist/bin.js",
     "types": "dist/index.d.ts",
     "scripts": {
+        "bin": "node dist/bin.js",
         "build": "tsup --onSuccess \"tsc --emitDeclarationOnly --declaration\"",
         "build:watch": "tsup --watch --onSuccess \"npm run start\"",
         "clean": "rm -rf ./dist",
@@ -27,7 +28,7 @@
     },
     "nx": {
         "targets": {
-            "start": {
+            "bin": {
                 "dependsOn": [
                     "build"
                 ]
