--- a/apps/vis/package.json
+++ b/apps/vis/package.json
@@ -29,6 +29,7 @@
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.5",
         "postcss": "^8.4.35",
+        "rollup-plugin-visualizer": "^5.12.0",
         "tailwindcss": "^3.4.1",
         "typescript": "^5.3.3",
         "vite": "^5.1.0",
