--- a/apps/vis/package.json
+++ b/apps/vis/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@ts-retype/search": "workspace:*",
         "@ts-retype/uikit": "workspace:*",
+        "@ts-retype/utils": "workspace:*",
         "minisearch": "^6.3.0",
         "ramda": "^0.28.0",
         "react": "^18.2.0",
