--- a/packages/uikit/package.json
+++ b/packages/uikit/package.json
@@ -18,14 +18,15 @@
         "build:css": "npx tailwindcss -c tailwind.config.cjs -i src/index.css -o dist/styles.css",
         "build:watch": "tsup --watch --onSuccess \"npm run start\"",
         "clean": "rm -rf ./dist",
-        "start": "node dist/index.js"
+        "start": "node dist/index.js",
+        "test": "vitest run --coverage",
+        "test:watch": "vitest watch"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
         "@ts-retype/search": "workspace:*",
-        "@ts-retype/theme": "workspace:*",
         "@ts-retype/utils": "workspace:*",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
@@ -36,6 +37,7 @@
         "@typescript-eslint/eslint-plugin": "^6.14.0",
         "@typescript-eslint/parser": "^6.14.0",
         "@vitejs/plugin-react": "^4.2.1",
+        "@vitest/coverage-v8": "^1.2.2",
         "autoprefixer": "^10.4.17",
         "eslint": "^8.55.0",
         "eslint-plugin-react-hooks": "^4.6.0",
@@ -43,14 +45,16 @@
         "postcss": "^8.4.35",
         "tailwindcss": "^3.4.1",
         "tsup": "^8.0.1",
-        "typescript": "^5.3.3"
+        "typescript": "^5.3.3",
+        "vitest": "^1.2.2"
     },
     "nx": {
         "targets": {
             "build": {
                 "dependsOn": [
                     "@ts-retype/theme:bin",
-                    "@ts-retype/uikit:build"
+                    "@ts-retype/search:build",
+                    "@ts-retype/utils:build"
                 ]
             }
         }
