feat: add stats tasks

--- a/packages/uikit/package.json
+++ b/packages/uikit/package.json
@@ -19,6 +19,7 @@
         "build:watch": "tsup --watch --onSuccess \"npm run start\"",
         "clean": "rm -rf ./dist",
         "start": "node dist/index.js",
+        "stats": "rollup -c rollup.config.mjs",
         "test": "vitest run --coverage",
         "test:watch": "vitest watch"
     },
