--- a/apps/bin/package.json
+++ b/apps/bin/package.json
@@ -16,6 +16,7 @@
         "clean": "rm -rf ./dist",
         "dev": "node dist/index.cjs --help",
         "start": "node dist/index.cjs --help",
+        "stats": "rollup -c rollup.config.mjs",
         "test": "vitest run --coverage"
     },
     "keywords": [],
@@ -27,6 +28,8 @@
         "commander": "^12.0.0"
     },
     "devDependencies": {
+        "@rollup/plugin-commonjs": "^25.0.7",
+        "@rollup/plugin-node-resolve": "^15.2.3",
         "@types/node": "^20.11.6",
         "@vitest/coverage-v8": "^1.2.2",
         "tsup": "^8.0.1",
