--- a/packages/search/package.json
+++ b/packages/search/package.json
@@ -56,6 +56,7 @@
         "build:watch": "tsup --watch --onSuccess \"npm run start\"",
         "clean": "rm -rf ./dist",
         "start": "node dist/index.js",
+        "stats": "rollup -c rollup.config.mjs",
         "test": "vitest run --coverage"
     },
     "keywords": [],
