refactor: split syntax highlighting package from search

--- a/apps/doc/package.json
+++ b/apps/doc/package.json
@@ -12,6 +12,7 @@
     },
     "dependencies": {
         "@ts-retype/search": "workspace:^",
+        "@ts-retype/syhi": "workspace:^",
         "@ts-retype/uikit": "workspace:^",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
