--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -55,6 +55,7 @@
   "dependencies": {},
   "devDependencies": {
     "@types/node": "^20.11.6",
+    "@vitest/coverage-v8": "^1.2.2",
     "tsup": "^8.0.1",
     "vitest": "^1.2.2"
   }
