--- a/apps/bin/package.json
+++ b/apps/bin/package.json
@@ -11,10 +11,10 @@
     "scripts": {
         "bin": "./dist/ts-retype.cjs .",
         "build": "tsup",
-        "build:watch": "tsup --watch --onSuccess \"npm run start\"",
+        "build:watch": "tsup --watch --onSuccess \"npm run dev\"",
         "copy-assets-from-vis": "mkdir -p ./dist/vis && cp -R ../vis/dist/* ./dist/vis/ && cp ./package.json ./dist/",
         "clean": "rm -rf ./dist",
-        "dev": "node dist/index.cjs --help",
+        "dev": "node dist/index.cjs",
         "start": "node dist/index.cjs --help",
         "stats": "rollup -c rollup.config.mjs",
         "test": "vitest run --coverage"
