--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -44,7 +44,7 @@
     "build": "tsup --onSuccess \"tsc --emitDeclarationOnly --declaration\"",
     "build:watch": "tsup --watch --onSuccess \"npm run start\"",
     "clean": "rm -rf ./dist",
-    "start": "node dist/index.js",
+    "start": "node dist/test.js",
     "stats": "rollup -c rollup.config.mjs",
     "test": "vitest run --coverage",
     "test:watch": "vitest watch"
