--- a/examples/code-components/package.json
+++ b/examples/code-components/package.json
@@ -16,25 +16,25 @@
         "ts": "node --experimental-specifier-resolution=node --loader ts-node/esm"
     },
     "dependencies": {
-        "@ts-retype/syhi": "*",
-        "@ts-retype/uikit": "*",
+        "@ts-retype/syhi": "^1.0.0",
+        "@ts-retype/uikit": "^1.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     },
     "devDependencies": {
-        "@types/react": "^18.2.43",
-        "@types/react-dom": "^18.2.17",
-        "@typescript-eslint/eslint-plugin": "^6.19.1",
-        "@typescript-eslint/parser": "^6.19.1",
+        "@types/react": "^18.2.64",
+        "@types/react-dom": "^18.2.21",
+        "@typescript-eslint/eslint-plugin": "^6.21.0",
+        "@typescript-eslint/parser": "^6.21.0",
         "@vitejs/plugin-react": "^4.2.1",
-        "autoprefixer": "^10.4.17",
-        "eslint": "^8.56.0",
+        "autoprefixer": "^10.4.18",
+        "eslint": "^8.57.0",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.5",
         "postcss": "^8.4.35",
         "rollup-plugin-visualizer": "^5.12.0",
         "tailwindcss": "^3.4.1",
-        "typescript": "^5.2.2",
-        "vite": "^5.1.0"
+        "typescript": "^5.4.2",
+        "vite": "^5.1.5"
     }
 }
