--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,12 @@
         "eslint:recommended",
         "plugin:@typescript-eslint/recommended"
     ],
+    "ignorePatterns": [
+        "dist/",
+        "tests/example/",
+        "generated/",
+        "vitest.d.ts"
+    ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaVersion": "latest",
@@ -32,6 +38,6 @@
             "error",
             "always"
         ],
-        "no-console": "error"
+        "no-console": "warn"
     }
 }
